--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "iamchristinewitt.com",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/vercel": "^8.0.1",
-    "astro": "^5.1.2"
+    "@astrojs/vercel": "^8.1.1",
+    "astro": "^5.4.2"
   }
 }
