--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "iamchristinewitt.com",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
